<resources>
    <string name="app_name">Play Your Life Mobile</string>
    <string name="string_home">Dom</string>
    <string name="string_report_error">Zgłoś błąd</string>
    <string name="string_others">Pozostałe</string>
    <string name="string_ad">Reklama</string>
    <string name="string_info">Informacje i opcje</string>
    <string name="app_report_info">Wybierz aplikację do wysyłania wiadomości e-mail</string>
    <string name="title_cars">Motoryzacja</string>
    <string name="title_tune">Tuning</string>
    <string name="title_earnings">Zarobki</string>
    <string name="cars_list_activity">Lista Pojazdów</string>
    <string name="cars_list_desc">Lista pojazdów dostępnych na serwerze wraz z danymi na ich temat. Znajdziesz tu między innymi v-max oraz podatek. Klikając na niektóre pojazdy, możesz sprawdzić ich tuning wizualny.</string>
    <string name="aso_list_activity">Asortyment Pojazdów</string>
    <string name="aso_list_desc">Aktualna lista pojazdów dostępnych w salonie, komisie i u cygana.</string>
    <string name="mechanical_list_activity">Tuning Mechaniczny</string>
    <string name="mechanical_list_desc">Części do pojazdów dostępne do montażu na serwerze. Sprawdzisz tutaj między innymi cenę oraz zwrot z demontażu.</string>
    <string name="wizu_list_activity">Tuning Wizualny</string>
    <string name="wizu_list_desc">Części wizualne do zamontowania w twoim pojeździe. Możesz zobaczyć lampki, liczniki, spojlery oraz ich ceny.</string>
    <string name="lights_list_activity">Kolorowe Światła</string>
    <string name="lights_list_desc">Światła możliwe do zamontowania w twoim pojeździe. Możesz zobaczyć tutaj wygląd lampek oraz ich cenę.</string>
    <string name="wheels_list_activity">Felgi Samochodowe</string>
    <string name="wheels_list_desc">Felgi, w które możesz wyposażyć swój pojazd. Tutaj możesz sprawdzić cenę montażu/demontażu oraz wygląd.</string>
    <string name="spoilers_list_activity">Spojlery</string>
    <string name="spoilers_list_desc">Serwerowe spojlery dostępne do montażu w Twoim pojeździe.</string>
    <string name="counters_list_activity">Liczniki</string>
    <string name="counters_list_desc">Liczniki samochodowe dostępne na serwerze, które możesz zamontować w swoim pojeździe.</string>
    <string name="wizu_uniwersalne_activity">Tuning Uniwersalny</string>
    <string name="wizu_uniwersalne_desc">Części wizualne niemające swojej dedykowanej kategorii, można je montować w każdym pojeździe.</string>
    <string name="casual_jobs_activity">Prace Dorywcze</string>
    <string name="casual_jobs_desc">Dane na temat poszczególnych prac dorywczych. Znajdziesz tutaj zarobki, umiejscowienie pracy oraz opis.</string>
    <string name="lv_jobs_activity">Prace Urzędowe LV</string>
    <string name="lv_jobs_desc">Prace stałe, których możesz podjąć się w urzędzie Las Venturas.</string>
    <string name="sf_jobs_activity">Prace Urzędowe SF</string>
    <string name="sf_jobs_desc">Prace stałe, których możesz podjąć się w urzędzie San Fierro.</string>
    <string name="fc_jobs_activity">Prace Urzędowe FC</string>
    <string name="fc_jobs_desc">Prace stałe, których możesz podjąć się w urzędzie Fort Carson.</string>
    <string name="ls_jobs_activity">Prace Urzędowe LS</string>
    <string name="ls_jobs_desc">Prace stałe, których możesz podjąć się w urzędzie Los Santos.</string>
    <string name="layout_tuning_wizu">Kliknij, aby zobaczyć tuning wizualny.</string>
    <string name="layout_fmk">FMK</string>
    <string name="layout_tax">PODATEK</string>
    <string name="layout_reset">ZEROWANIE</string>
    <string name="layout_cena">CENA KATALOGOWA</string>
    <string name="layout_dem">DEMONTAŻ</string>
    <string name="layout_price_l">CENA</string>
    <string name="layout_przebieg">PRZEBIEG</string>
    <string name="layout_1h">1H</string>
    <string name="layout_description">Opis</string>
    <string name="layout_allows">Umożliwia:</string>
    <string name="layout_lifetime">ŻYWOTNOŚĆ</string>
    <string name="lights_lifetime">2500km</string>
    <string name="layout_range">ZAKRES</string>
    <string name="content_back">Powrót</string>
    <string name="content_menu">Menu</string>
    <string name="info_author">Autorzy</string>
    <string name="info_author_name">Feluu  |  Msciciel</string>
    <string name="info_app_version">Wersja aplikacji</string>
    <string name="info_used">Użyte zasoby</string>
    <string name="info_used_2">Przytrzymaj, aby zobaczyć</string>
    <string name="info_github">GitHub</string>
    <string name="info_github_link">Mscicel55/Play-Your-Life-Mobile</string>
    <string name="options">Ustawienia</string>
    <string name="infos">Informacje</string>
    <string name="options_dark_theme">Tryb Ciemny</string>
    <string name="error">Coś poszło nie tak</string>
    <string name="avail_wheels">Dostępne felgi</string>
    <string name="rodzaje_felg">Szerokość felg</string>
    <string name="salon">Salon</string>
    <string name="komis">Komis</string>
    <string name="cygan">Cygan</string>
    <string name="cygan_lv">Cygan LV Strip</string>
    <string name="cygan_lb">Cygan Las Barrancas</string>
    <string name="salon_doherty">Salon Doherty</string>
    <string name="salon_motocykli">Salon Motocykli</string>
    <string name="salon_gold">Salon GOLD</string>
    <string name="admiral_name">Admiral</string>
    <string name="admiral_vmax">146km/h</string>
    <string name="admiral_vmaxfmk">181km/h</string>
    <string name="admiral_tax">990€</string>
    <string name="admiral_reset">55.000€</string>
    <string name="admiral_cena">45.000€</string>
    <string name="alpha_name">Alpha</string>
    <string name="alpha_vmax">151km/h</string>
    <string name="alpha_vmaxfmk">197km/h</string>
    <string name="alpha_tax">3.210€</string>
    <string name="alpha_reset">N/A</string>
    <string name="alpha_cena">N/A</string>
    <string name="bandito_name">Bandito</string>
    <string name="bandito_vmax">131km/h</string>
    <string name="bandito_vmaxfmk">164km/h</string>
    <string name="bandito_tax">9.750€</string>
    <string name="bandito_reset">N/A</string>
    <string name="bandito_cena">N/A</string>
    <string name="banshee_name">Banshee</string>
    <string name="banshee_vmax">180km/h</string>
    <string name="banshee_vmaxfmk">220km/h</string>
    <string name="banshee_tax">6.150€</string>
    <string name="banshee_reset">225.500€</string>
    <string name="banshee_cena">189.000€</string>
    <string name="bf_name">BF Injection</string>
    <string name="bf_vmax">121km/h</string>
    <string name="bf_vmaxfmk">153km/h</string>
    <string name="bf_tax">3.450€</string>
    <string name="bf_reset">N/A</string>
    <string name="bf_cena">N/A</string>
    <string name="bf400_name">BF-400</string>
    <string name="bf400_vmax">168km/h</string>
    <string name="bf400_vmaxfmk">194km/h</string>
    <string name="bf400_tax">2.970€</string>
    <string name="bf400_reset">N/A</string>
    <string name="bf400_cena">102.000€</string>
    <string name="blade_name">Blade</string>
    <string name="blade_vmax">155km/h</string>
    <string name="blade_vmaxfmk">191km/h</string>
    <string name="blade_tax">3.300€</string>
    <string name="blade_reset">N/A</string>
    <string name="blade_cena">116.000€</string>
    <string name="blista_name">Blista</string>
    <string name="blista_vmax">145km/h</string>
    <string name="blista_vmaxfmk">190km/h</string>
    <string name="blista_tax">1.050€</string>
    <string name="blista_reset">56.000€</string>
    <string name="blista_cena">N/A</string>
    <string name="bobcat_name">Bobcat</string>
    <string name="bobcat_vmax">125km/h</string>
    <string name="bobcat_vmaxfmk">158km/h</string>
    <string name="bobcat_tax">780€</string>
    <string name="bobcat_reset">N/A</string>
    <string name="bobcat_cena">59.000€</string>
    <string name="bravura_name">Bravura</string>
    <string name="bravura_vmax">131km/h</string>
    <string name="bravura_vmaxfmk">164km/h</string>
    <string name="bravura_tax">660€</string>
    <string name="bravura_reset">N/A</string>
    <string name="bravura_cena">N/A</string>
    <string name="broadway_name">Broadway</string>
    <string name="broadway_vmax">141km/h</string>
    <string name="broadway_vmaxfmk">175km/h</string>
    <string name="broadway_tax">3.370€</string>
    <string name="broadway_reset">N/A</string>
    <string name="broadway_cena">N/A</string>
    <string name="bucaner_name">Buccaneer</string>
    <string name="bucaner_vmax">147km/h</string>
    <string name="bucaner_vmaxfmk">182km/h</string>
    <string name="bucaner_tax">570€</string>
    <string name="bucaner_reset">N/A</string>
    <string name="bucaner_cena">N/A</string>
    <string name="buffalo_name">Buffalo</string>
    <string name="buffalo_vmax">166km/h</string>
    <string name="buffalo_vmaxfmk">204km/h</string>
    <string name="buffalo_tax">1.815€</string>
    <string name="buffalo_reset">66.500€</string>
    <string name="buffalo_cena">70.000€</string>
    <string name="bullet_name">Bullet</string>
    <string name="bullet_vmax">181km/h</string>
    <string name="bullet_vmaxfmk">235km/h</string>
    <string name="bullet_tax">7.800€</string>
    <string name="bullet_reset">286.000€</string>
    <string name="bullet_cena">N/A</string>
    <string name="burrito_name">Burrito</string>
    <string name="burrito_vmax">140km/h</string>
    <string name="burrito_vmaxfmk">174km/h</string>
    <string name="burrito_tax">2.400€</string>
    <string name="burrito_reset">88.000€</string>
    <string name="burrito_cena">57.000€</string>
    <string name="cadrona_name">Cadrona</string>
    <string name="cadrona_vmax">137km/h</string>
    <string name="cadrona_vmaxfmk">167km/h</string>
    <string name="cadrona_tax">270€</string>
    <string name="cadrona_reset">N/A</string>
    <string name="cadrona_cena">N/A</string>
    <string name="camper_name">Camper</string>
    <string name="camper_vmax">109km/h</string>
    <string name="camper_vmaxfmk">140km/h</string>
    <string name="camper_tax">2.040€</string>
    <string name="camper_reset">N/A</string>
    <string name="camper_cena">45.000€</string>
    <string name="cheetah_name">Cheetah</string>
    <string name="cheetah_vmax">172km/h</string>
    <string name="cheetah_vmaxfmk">229km/h</string>
    <string name="cheetah_tax">10.500€</string>
    <string name="cheetah_reset">385.000€</string>
    <string name="cheetah_cena">N/A</string>
    <string name="clover_name">Clover</string>
    <string name="clover_vmax">147km/h</string>
    <string name="clover_vmaxfmk">182km/h</string>
    <string name="clover_tax">570€</string>
    <string name="clover_reset">57.000€</string>
    <string name="clover_cena">N/A</string>
    <string name="club_name">Club</string>
    <string name="club_vmax">142km/h</string>
    <string name="club_vmaxfmk">190km/h</string>
    <string name="club_tax">1.274€</string>
    <string name="club_reset">N/A</string>
    <string name="club_cena">67.000€</string>
    <string name="comet_name">Comet</string>
    <string name="comet_vmax">160km/h</string>
    <string name="comet_vmaxfmk">204km/h</string>
    <string name="comet_tax">1.950€</string>
    <string name="comet_reset">71.500€</string>
    <string name="comet_cena">135.000€</string>
    <string name="comet_2_name">Comet II</string>
    <string name="comet_2_vmax">194km/h</string>
    <string name="comet_2_vmaxfmk">204km/h</string>
    <string name="comet_2_tax">1.950€</string>
    <string name="comet_2_reset">N/A</string>
    <string name="comet_2_cena">N/A</string>
    <string name="elegant_name">Elegant</string>
    <string name="elegant_vmax">149km/h</string>
    <string name="elegant_vmaxfmk">184km/h</string>
    <string name="standard_lights_name">Standardowe</string>
    <string name="standard_price_l">500€</string>
    <string name="standard_counter_name">Standardowy</string>
    <string name="standard_counter_range">0–260km/h</string>
</resources>