<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clipChildren="false"
        android:focusable="true"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/standard_counter_name"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/standard_licznik" />

            <TextView
                android:id="@+id/wheelsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/imageView2"
                android:text="@string/standard_lights_name"
                android:textColor="?attr/textDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewPrice"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/wheelsName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/layout_price_l"
                android:tint="?attr/textDark"
                app:srcCompat="@drawable/ic_earnings_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wheelsName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="14dp"
                android:text="@string/layout_price_l"
                android:textColor="?attr/textDark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wheelsName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8.5dp"
                android:text="@string/standard_price_l"
                android:textColor="?attr/textLight"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/counters_list_activity"
                android:tint="?attr/textDark"
                app:srcCompat="@drawable/ic_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="13.5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/layout_range"
                android:textColor="?attr/textDark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/demont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="80.7dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:text="@string/standard_counter_range"
                android:textColor="?attr/textLight"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
