<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clipChildren="false"
        android:focusable="true"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/admiral_name"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/admiral" />

            <TextView
                android:id="@+id/wheelsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/imageView2"
                android:text="@string/admiral_name"
                android:textColor="?attr/textDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewVMax"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/wheelsName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/imageView2"
                android:contentDescription="@string/admiral_vmax"
                android:scaleType="fitStart"
                android:tint="?attr/textDark"
                android:src="@drawable/ic_speed" />

            <TextView
                android:id="@+id/vMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wheelsName"
                android:layout_alignParentStart="true"
                android:layout_marginStart="41dp"
                android:layout_marginTop="4dp"
                android:text="@string/admiral_vmax"
                android:textColor="?attr/textLight"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewVMaxFMK"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/imageViewVMax"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/imageView2"
                android:contentDescription="@string/admiral_vmaxfmk"
                android:scaleType="fitStart"
                android:tint="?attr/textDark"
                android:src="@drawable/ic_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewVMax"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="11dp"
                android:text="@string/layout_fmk"
                android:textColor="?attr/textDark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/vMaxFMK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewVMax"
                android:layout_alignParentStart="true"
                android:layout_marginStart="62dp"
                android:layout_marginTop="4.5dp"
                android:text="@string/admiral_vmaxfmk"
                android:textColor="?attr/textLight"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewPrice"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/imageViewVMaxFMK"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/layout_price_l"
                android:tint="?attr/textDark"
                app:srcCompat="@drawable/ic_earnings_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewVMaxFMK"
                android:layout_alignParentStart="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="29dp"
                android:text="@string/layout_tax"
                android:textColor="?attr/textDark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewVMaxFMK"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:layout_marginTop="23.5dp"
                android:text="@string/admiral_tax"
                android:textColor="?attr/textLight"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/layout_reset"
                android:tint="?attr/textDark"
                app:srcCompat="@drawable/ic_earnings_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="5dp"
                android:text="@string/layout_reset"
                android:textColor="?attr/textDark"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewPrice"
                android:layout_alignParentStart="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="5dp"
                android:text="@string/admiral_reset"
                android:textColor="?attr/textLight"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
